Added make fileto the report.

--- a/report.tex
+++ b/report.tex
@@ -22,7 +22,7 @@
 % Set the title, author, and date.
 %
 \title{Accelerometer data classification using Neural Networks}
-\author{Sameer AbuAsal}
+\author{ Sameer, Shantanu Rekah, Eera}
 \date{}
 
 %
@@ -36,7 +36,7 @@
 % Add an abstract.
 \abstract{
 Human activity is a great source for building new kind of services that take the current status of the user into consideration.
-Equipping a service provided by a phone application with the status of the user results in richer and more engaging services. In 
+Equipping a service provided by a phone application with the context of the user results in richer and more engaging services. In 
 this work we present a neural based classifier that is able to detect the status of the human body from readings of 
 accelerometers placed on different parts of the body. We show how different configuration of the neural network and 
 data preprocessing can change the accuracy of our prediction, we also show how we can predict the movement using one 
@@ -44,6 +44,9 @@ accelerometer reading to simulate the effect of having a mobile device in users 
 the user's wrist. To the best of our knowledge this is the first study that considers a single source of data and 
 achieves (676876\%) accuracy. 
 }
+
+
+
 
 
 
@@ -87,7 +90,7 @@ MAGIC MAGIC MAGIC Oh MY GOD !!
 \label{DataSet}
 
 Raw data we are using are based on the work by ~\cite{ugulino2012wearable}. The data set report 8 hours of activity of 4 subject tests 
-of varying age , weigh , height and gender. Each subject provided two hours of activity of postures varying between (Standing,
+of varying age , weight, height and gender. Each subject provided two hours of activity of postures varying between (Standing,
 sitting down, sitting , standing up and walking). The data provided is a continuous stream of reading from sensors placed of four 
 parts of the body, waist, arm, leg and foot. Figure ~\ref{acc_placement} shows the places of these accelerators.   
 
