Reordering and tidying
* Move report files into separate report directory.
* Added images to the report.

--- a/report/report.tex
+++ b/report/report.tex
@@ -79,6 +79,7 @@ the methodology we used, section~\ref{conclusion} discusses a summary of the res
 \section{Accelerometer}
 \label{accelerometer} 
 \DeclareGraphicsExtensions{.pdf,.png,.jpeg}
+
 MAGIC MAGIC MAGIC OH MY GOD !!
 
 \section{Data Set}
@@ -99,6 +100,7 @@ parts of the body, waist, arm, leg and foot. Figure~\ref{acc_placement} shows th
  
 
 \section{Methodology}
+\DeclareGraphicsExtensions{.pdf,.png,.jpeg}
 \label{meth}
 
 Previous work in detecting the body posture~\cite{ugulino2012wearable} used decision tree algorithms , namely C4.5,  with intensive 
@@ -112,13 +114,12 @@ and to let the neural network the feature extraction. We try to train our networ
   \item A person specific learner where we only do the training for one person for increased accuracy. 
   \item Use only one accelerometer to detect body posture. This gives a more realistic use case where the user only 
         has one source of data; a smart phone. Section~\ref{single_acc} discusses that.
-  \item Using recurrent neural newtwork to classify raw data. Section~\ref{rec_neural} discusses this work.
+  \item Using recurrent neural network to classify raw data. Section~\ref{rec_neural} discusses this work.
   \item Hello 
 \end{enumerate}  
 
 \subsection{Classification using raw rows}
 \label{simple_rows}
-MAGIC MAGIC MAGIC.
 
 \subsection{Consecutive Rows}
 \label{consecutive_rows}
@@ -130,6 +131,17 @@ MAGIC MAGIC MAGIC.
 \subsection{Recurrent neural network}
 \label{rec_neural}
 
+In this section we try to use recurrent Neural networks instead of feed forward 
+networks to build a learner for the continuous data. Wu use Continuous time recurrent 
+Neural networks.  
+
+%\begin{figure}[h]
+%\centering
+%\includegraphics[width=2.5in]{feed_forward_neural_net}
+%\captio{Feed forward network}
+%\label{feed_forward}
+%\end{figure}
+
 \section {Conclusion}
 \label{conclusion}
 
@@ -137,7 +149,7 @@ MAGIC MAGIC MAGIC.
 MAGIC MAGIC 
 
 \begin{enumerate}
-  \item Sameer.  
+  \item Sameer
   \item is  
   \item the 
   \item Best
