--- a/report/report.bib
+++ b/report/report.bib
@@ -7,3 +7,62 @@
   publisher={Springer}
 }
 
+
+@book{MATLAB:2014,
+year = {2014},
+author = {MATLAB},
+title = {version 8.3.0 (R2014a)},
+publisher = {The MathWorks Inc.},
+address = {Natick, Massachusetts}
+}
+
+@article{pybrain2010jmlr,
+	Author = {Schaul, Tom and Bayer, Justin and Wierstra, Daan and Sun, Yi and 
+	          Felder, Martin and Sehnke, Frank and R{\"u}ckstie{\ss}, Thomas and Schmidhuber, J{\"u}rgen},
+	Journal = {Journal of Machine Learning Research},
+	Pages = {743--746},
+	Title = {{PyBrain}},
+	Volume = {11},
+	Year = {2010}
+}
+
+
+@article{hochreiter1997long,
+  title={Long short-term memory},
+  author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
+  journal={Neural computation},
+  volume={9},
+  number={8},
+  pages={1735--1780},
+  year={1997},
+  publisher={MIT Press}
+}
+
+ 
+@misc{NeuroLab:Online,
+title = {NeuroLab: Simple and powerful neural network library for Python},
+author = {NeuroLab},
+month = May,
+year = {2014},
+url = {https://code.google.com/p/neurolab/}
+}
+
+
+
+@misc{BrainJs,
+title = {Brain: Neural networks in JavaScript},
+author = {BrainJS},
+month = May,
+year = {2014},
+url = {https://github.com/harthur/brain}
+}
+
+
+@misc{Cuda-convert,
+title = {High-performance C++/CUDA implementation of convolutional neural networks},
+author = {NeuroLab},
+month = May,
+year = {2014},
+url = {https://code.google.com/p/cuda-convnet}
+}
+
