Adding changes from the report.
Committing changes for the report.

--- a/report/report.tex
+++ b/report/report.tex
@@ -48,8 +48,8 @@ accelerometers placed on different parts of the body. We show how different conf
 data preprocessing can change the accuracy of our prediction, we also show how we can predict the movement using one 
 accelerometer reading to simulate the effect of having a mobile device in users pocket or a smart watch attached to 
 the user's wrist. To the best of our knowledge this is the first study that considers a single source of data and 
-achieves (96\%) accuracy. 
-}
+achieves (96.5\%) accuracy.}
+
 
 \section{Introduction}
 \label{introduction}
@@ -187,7 +187,7 @@ along the training steps and the number of validation checks.
 
 \subsection{Single source of data} 
 \label{single_acc}
-Good prediction accuracy we achieved with readings from four different accelerometers made us think of what accuracy we can sustain with 
+Near perfect prediction accuracy we achieved with readings from four different accelerometers made us think of what accuracy we can sustain with 
 only one accelerometer. In part this also mimics the situation we have in real life where the subject holds a phone in his hand or in her
 pocket. 
 
